package practica7.ejercicio1;

public interface IStrategyLavado {
    public int lavar(Lavarropas l);
}
