@startuml ej1
skinparam ClassBackgroundColor transparent
skinparam NoteBackgroundColor transparent
skinparam classAttributeIconSize 0 
skinparam ClassBorderThickness 1.3
skinparam ClassBorderColor Black
skinparam NoteBorderColor Black
skinparam ArrowColor Black
skinparam shadowing false

class Lavarropas{
    +agregarAgua(porcentaje: int)
    +agregarJabonEnPolvo()
    +lavar(minutos: int): int
    +vaciarAgua()
    +agregarEnjuague()
    +enjuagar(minutos: int)
    +centrifugar(minutos: int)
}

interface IStrategyLavado{
    +lavar(L: Lavarropas): int
}
Lavarropas o-- IStrategyLavado : estrategia
note "STRATEGY" as N1
N1 .l. IStrategyLavado

class LavadoDiario{
    +lavar(L: Lavarropas): int
}

class RopaDelicada{
    +lavar(L: Lavarropas): int
}

class RopaMuySucia{
    +lavar(L: Lavarropas): int
}

IStrategyLavado <|-- LavadoDiario
IStrategyLavado <|-- RopaDelicada
IStrategyLavado <|-- RopaMuySucia

@enduml